--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio / Chaesthetics (Auriel James Fernandez)</title>
   </head>
   <body>
-    <div id="app" class="bg-stone-900 min-h-screen h-auto"></div>
+    <div id="app" class="bg-stone-900 h-auto w-auto min-h-screen min-w-screen"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
